test(footer): disable scrollY for content

--- a/core/src/components/footer/test/scroll-target/index.html
+++ b/core/src/components/footer/test/scroll-target/index.html
@@ -76,7 +76,7 @@
           <ion-title>Mailboxes</ion-title>
         </ion-toolbar>
       </ion-header>
-      <ion-content fullscreen="true">
+      <ion-content fullscreen="true" scroll-y="false">
         <div id="scroll-target" class="ion-content-scroll-host">
           <div class="grid ion-padding">
             <div class="grid-item red"></div>
