fix(refresher): remove need to specify background content for target

--- a/core/src/components/refresher/test/scroll-target/index.html
+++ b/core/src/components/refresher/test/scroll-target/index.html
@@ -24,11 +24,6 @@
       contain: size style;
     }
 
-    #background-content {
-      position: absolute;
-      background: var(--background);
-    }
-
     #inner-scroll {
       height: 100%;
       overflow-y: auto;
@@ -44,9 +39,8 @@
       </ion-toolbar>
     </ion-header>
 
-    <ion-content>
+    <ion-content scroll-y="false">
       <div id="content" class="ion-content-scroll-host">
-        <div id="background-content"></div>
         <div style="position: absolute; left: 0; top: 0; width: 100%;">
           <ion-refresher id="refresher" slot="fixed">
             <ion-refresher-content></ion-refresher-content>
