test(reorder-group): use ion-content with scroll target

--- a/core/src/components/reorder-group/test/scroll-target/index.html
+++ b/core/src/components/reorder-group/test/scroll-target/index.html
@@ -30,33 +30,35 @@
       </ion-toolbar>
     </ion-header>
 
-    <div id="content" class="ion-content-scroll-host">
-      <ion-list>
-        <ion-reorder-group id="reorder" disabled="false">
-          <ion-reorder id="item-0">
-            <ion-item>
-              <ion-label>
-                <h2>Item 0</h2>
-              </ion-label>
-            </ion-item>
-          </ion-reorder>
-          <ion-reorder id="item-1">
-            <ion-item>
-              <ion-label>
-                <h2>Item 1</h2>
-              </ion-label>
-            </ion-item>
-          </ion-reorder>
-          <ion-reorder id="item-2">
-            <ion-item>
-              <ion-label>
-                <h2>Item 2</h2>
-              </ion-label>
-            </ion-item>
-          </ion-reorder>
-        </ion-reorder-group>
-      </ion-list>
-    </div>
+    <ion-content scroll-y="false">
+      <div id="content" class="ion-content-scroll-host">
+        <ion-list>
+          <ion-reorder-group id="reorder" disabled="false">
+            <ion-reorder id="item-0">
+              <ion-item>
+                <ion-label>
+                  <h2>Item 0</h2>
+                </ion-label>
+              </ion-item>
+            </ion-reorder>
+            <ion-reorder id="item-1">
+              <ion-item>
+                <ion-label>
+                  <h2>Item 1</h2>
+                </ion-label>
+              </ion-item>
+            </ion-reorder>
+            <ion-reorder id="item-2">
+              <ion-item>
+                <ion-label>
+                  <h2>Item 2</h2>
+                </ion-label>
+              </ion-item>
+            </ion-reorder>
+          </ion-reorder-group>
+        </ion-list>
+      </div>
+    </ion-content>
 
   </ion-app>
 
