--- a/core/src/components/datetime/test/disable-dates/index.html
+++ b/core/src/components/datetime/test/disable-dates/index.html
@@ -47,25 +47,64 @@
           <ion-datetime id="specificDate" value="2021-10-01"></ion-datetime>
         </div>
 
+        <div class="grid-item">
+          <h2>Disable Weekends</h2>
+          <ion-datetime id="weekends" value="2021-10-01"></ion-datetime>
+        </div>
+
+        <div class="grid-item">
+          <h2>Disable Date Range</h2>
+          <ion-datetime id="dateRange" value="2021-10-01"></ion-datetime>
+        </div>
+
+        <div class="grid-item">
+          <h2>Disable Month</h2>
+          <ion-datetime id="month" value="2021-10-01"></ion-datetime>
+        </div>
+
       </div>
     </ion-content>
 
     <script>
-      // const datetime = document.querySelector('ion-datetime');
-      // datetime.addEventListener('ionChange', (ev) => {
-      //   console.log('Change', ev.detail.value);
-      // })
-
       const specificDateDisabled = document.querySelector('#specificDate');
       specificDateDisabled.isAllowedDate = (dateIsoString) => {
         const date = new Date(dateIsoString);
-
-        console.log('date', date);
-
-        if (date.getDate() === 10 && date.getMonth() === 9 && date.getFullYear() === 2021) {
+        // Disables October 10, 2021.
+        if (date.getUTCDate() === 10 && date.getUTCMonth() === 9 && date.getUTCFullYear() === 2021) {
           return false;
         }
+        return true;
+      }
 
+      const weekendsDisabled = document.querySelector('#weekends');
+      weekendsDisabled.isAllowedDate = (dateIsoString) => {
+        const date = new Date(dateIsoString);
+        // Disables Sunday and Saturday
+        if (date.getUTCDay() === 0 || date.getUTCDay() === 6) {
+          return false;
+        }
+        return true;
+      }
+
+      const dateRangeDisabled = document.querySelector('#dateRange');
+      dateRangeDisabled.isAllowedDate = (dateIsoString) => {
+        const date = new Date(dateIsoString);
+        // Disables dates between October 10, 2021 and October 20, 2021.
+        if (date.getUTCMonth() === 9 && date.getUTCFullYear() === 2021) {
+          if (date.getUTCDate() >= 10 && date.getUTCDate() <= 20) {
+            return false;
+          }
+        }
+        return true;
+      }
+
+      const monthDisabled = document.querySelector('#month');
+      monthDisabled.isAllowedDate = (dateIsoString) => {
+        const date = new Date(dateIsoString);
+        // Disables October (every year)
+        if (date.getUTCMonth() === 9) {
+          return false;
+        }
         return true;
       }
     </script>
