--- a/angular/test/test-app/src/app/modal-inline/modal-inline.component.html
+++ b/angular/test/test-app/src/app/modal-inline/modal-inline.component.html
@@ -1,6 +1,16 @@
 <ion-button id="open-modal">Open Modal</ion-button>
 
-<ion-modal [animated]="false" trigger="open-modal" [breakpoints]="[0.1, 0.5, 1]" [initialBreakpoint]="0.5">
+<ul>
+  <li>
+    breakpointWillChange event count: <span id="breakpointWillChange">{{ breakpointWillChangeCounter }}</span>
+  </li>
+  <li>
+    breakpointDidChange event count: <span id="breakpointDidChange">{{ breakpointDidChangeCounter }}</span>
+  </li>
+</ul>
+
+<ion-modal [animated]="false" trigger="open-modal" [breakpoints]="[0.1, 0.5, 1]" [initialBreakpoint]="0.5"
+  (breakpointWillChange)="onBreakpointWillChange()" (breakpointDidChange)="onBreakpointDidChange()">
   <ng-template>
     <ion-content>
       <ion-list>
