--- a/core/src/components/popover/test/basic/index.html
+++ b/core/src/components/popover/test/basic/index.html
@@ -4,16 +4,19 @@
 <head>
   <meta charset="UTF-8">
   <title>Popover - Basic</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
   <link href="../../../../../css/ionic.bundle.css" rel="stylesheet">
   <link href="../../../../../scripts/testing/styles.css" rel="stylesheet">
   <script src="../../../../../scripts/testing/scripts.js"></script>
   <script nomodule src="../../../../../dist/ionic/ionic.js"></script>
-  <script type="module" src="../../../../../dist/ionic/ionic.esm.js"></script></head>
-  <script type="module">
-    import { popoverController } from '../../../../dist/ionic/index.esm.js';
-    window.popoverController = popoverController;
-  </script>
+  <script type="module" src="../../../../../dist/ionic/ionic.esm.js"></script>
+</head>
+<script type="module">
+  import { popoverController } from '../../../../dist/ionic/index.esm.js';
+  window.popoverController = popoverController;
+</script>
+
 <body>
   <ion-app>
 
@@ -29,13 +32,26 @@
     </ion-header>
 
     <ion-content class="ion-padding" id="content">
-      <ion-button id="basic-popover" expand="block" onclick="presentPopover({ component: 'profile-page', event: event, htmlAttributes: { 'data-testid': 'basic-popover' } })">Show Popover</ion-button>
-      <ion-button id="translucent-popover" expand="block" onclick="presentPopover({ component: 'translucent-page', event: event, translucent: true })">Show Translucent Popover</ion-button>
-      <ion-button id="long-list-popover" expand="block" color="secondary" onclick="presentPopover({ component: 'list-page', event: event })">Show Long List Popover</ion-button>
-      <ion-button id="no-event-popover" expand="block" color="danger" onclick="presentPopover({ component: 'profile-page' })">No Event Popover</ion-button>
-      <ion-button id="custom-class-popover" expand="block" color="tertiary" onclick="presentPopover({ component: 'translucent-page', event: event, cssClass: 'my-custom-class' })">Custom Class Popover</ion-button>
-      <ion-button id="header-popover" expand="block" onclick="presentPopover({ component: 'header-page' })">Popover With Header</ion-button>
-      <ion-button id="translucent-header-popover" expand="block" onclick="presentPopover({ component: 'translucent-header-page' })">Popover With Translucent Header</ion-button>
+      <ion-button id="basic-popover" expand="block"
+        onclick="presentPopover({ component: 'profile-page', event: event, htmlAttributes: { 'data-testid': 'basic-popover' } })">
+        Show Popover</ion-button>
+      <ion-button id="translucent-popover" expand="block"
+        onclick="presentPopover({ component: 'translucent-page', event: event, translucent: true })">Show Translucent
+        Popover</ion-button>
+      <ion-button id="long-list-popover" expand="block" color="secondary"
+        onclick="presentPopover({ component: 'list-page', event: event })">Show Long List Popover</ion-button>
+      <ion-button id="no-event-popover" expand="block" color="danger"
+        onclick="presentPopover({ component: 'profile-page' })">No Event Popover</ion-button>
+      <ion-button id="custom-class-popover" expand="block" color="tertiary"
+        onclick="presentPopover({ component: 'translucent-page', event: event, cssClass: 'my-custom-class' })">Custom
+        Class Popover</ion-button>
+      <ion-button id="header-popover" expand="block" onclick="presentPopover({ component: 'header-page' })">Popover With
+        Header</ion-button>
+      <ion-button id="translucent-header-popover" expand="block"
+        onclick="presentPopover({ component: 'translucent-header-page' })">Popover With Translucent Header</ion-button>
+      <ion-button id="popover-with-textarea" expand="block"
+        onclick="presentPopover({ component: 'textarea-page', event: event, htmlAttributes: { 'data-testid': 'popover-with-textarea'} })">
+        Popover With Textarea</ion-button>
     </ion-content>
 
     <ion-footer>
@@ -178,6 +194,23 @@
     }
 
     customElements.define('translucent-header-page', TranslucentHeaderPage);
+
+    class TextAreaPage extends HTMLElement {
+      constructor() {
+        super();
+      }
+
+      connectedCallback() {
+        this.innerHTML = `
+          <ion-content>
+            <ion-textarea rows="4" style="max-height: 44px; overflow-y: auto;" value="the cursor in this <ion-textarea>\nmust be able to be moved\nwith the arrow keys and\nhome and end keys"></ion-textarea>
+            <textarea rows="4" style="display:block;width: 100%;border: 0;padding: 8px; max-height: 44px; overflow-y: auto">the cursor in this <textarea>\nmust be able to be moved\nwith the arrow keys and\nhome and end keys</textarea>
+          </ion-content>
+        `;
+      }
+    }
+
+    customElements.define('textarea-page', TextAreaPage);
   </script>
 </body>
 
