--- a/core/src/components/range/test/basic/index.html
+++ b/core/src/components/range/test/basic/index.html
@@ -66,7 +66,7 @@
           </ion-label>
         </ion-list-header>
         <ion-item>
-          <ion-range value="20" aria-label="Default Range"></ion-range>
+          <ion-range id="basic" value="20" aria-label="Default Range"></ion-range>
         </ion-item>
         <ion-item>
           <ion-range value="60" color="light" step="10" pin="true" aria-label="Light Pin Range"></ion-range>
