feat(header): add collasible mode to md

--- a/core/src/components/header/header.md.scss
+++ b/core/src/components/header/header.md.scss
@@ -20,12 +20,17 @@
   background-repeat: repeat-x;
 
   content: "";
-}
 
-.header-collapse-condense {
-  display: none;
+  // For Collapse scroll
+  opacity: var(--opacity-scale);
 }
 
 .header-md.ion-no-border::after {
   display: none;
+}
+
+// Collapse
+// --------------------------------------------------
+.header-collapse-condense::after {
+  content: none;
 }
