--- a/core/src/components/header/header.scss
+++ b/core/src/components/header/header.scss
@@ -17,3 +17,78 @@ ion-header {
 ion-header ion-toolbar:first-of-type {
   padding-top: var(--ion-safe-area-top, 0);
 }
+
+// Collapse Fade
+// --------------------------------------------------
+ion-header.header-collapse-fade ion-toolbar {
+  --opacity-scale: inherit;
+}
+
+// Collapse Condense
+// --------------------------------------------------
+ion-header.header-collapse-condense {
+  z-index: 9;
+}
+
+ion-header.header-collapse-condense ion-toolbar {
+  position: sticky;
+  top: 0;
+}
+
+ion-header.header-collapse-condense ion-toolbar:first-of-type {
+  padding-top: 7px;
+
+  z-index: 1;
+}
+
+/**
+ * Large title toolbar should just use the content background
+ * since it needs to blend in with the header above it.
+ */
+ion-header.header-collapse-condense ion-toolbar {
+  --background: var(--ion-background-color, #fff);
+
+  z-index: 0;
+}
+
+ion-header.header-collapse-condense ion-toolbar:last-of-type {
+  --border-width: 0px;
+}
+
+ion-header.header-collapse-condense ion-toolbar ion-searchbar {
+  height: 48px;
+
+  padding-top: 0px;
+  padding-bottom: 13px;
+}
+
+
+ion-header.header-collapse-main {
+  --opacity-scale: 1;
+}
+
+ion-header.header-collapse-main ion-toolbar {
+  --opacity-scale: inherit;
+}
+
+ion-header.header-collapse-main ion-toolbar.in-toolbar ion-title,
+ion-header.header-collapse-main ion-toolbar.in-toolbar ion-buttons {
+  transition: all 0.2s ease-in-out;
+}
+
+ion-header.header-collapse-condense-inactive:not(.header-collapse-condense) ion-toolbar.in-toolbar ion-title,
+ion-header.header-collapse-condense-inactive:not(.header-collapse-condense) ion-toolbar.in-toolbar ion-buttons.buttons-collapse {
+  opacity: 0;
+  pointer-events: none;
+}
+
+/**
+ * There is a bug in Safari where changing
+ * the opacity of an element in a scrollable container
+ * while rubber-banding causes the scroll position
+ * to jump to the top
+ */
+ion-header.header-collapse-condense-inactive.header-collapse-condense ion-toolbar.in-toolbar ion-title,
+ion-header.header-collapse-condense-inactive.header-collapse-condense ion-toolbar.in-toolbar ion-buttons.buttons-collapse {
+  visibility: hidden;
+}
