--- a/core/src/components/popover/test/position/index.html
+++ b/core/src/components/popover/test/position/index.html
@@ -14,16 +14,17 @@
     <script type="module" src="../../../../../dist/ionic/ionic.esm.js"></script>
   </head>
   <style>
-    .grid {
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
-      grid-row-gap: 20px;
-      grid-column-gap: 20px;
-
-      padding: 200px;
+    @media (min-width: 768px) {
+      .grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-row-gap: 20px;
+        grid-column-gap: 20px;
+      }
     }
     .grid-item {
       margin: 0 auto;
+      text-align: center;
     }
     h2 {
       font-size: 12px;
