test(popover): consolidate some screenshots by opening all popovers at once

--- a/core/src/components/popover/test/position/index.html
+++ b/core/src/components/popover/test/position/index.html
@@ -14,13 +14,14 @@
     <script type="module" src="../../../../../dist/ionic/ionic.esm.js"></script>
   </head>
   <style>
-    @media (min-width: 768px) {
-      .grid {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-row-gap: 20px;
-        grid-column-gap: 20px;
-      }
+    ion-app > ion-content {
+      --background: #DDDDDD;
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-row-gap: 40px;
+      grid-column-gap: 20px;
     }
     .grid-item {
       margin: 0 auto;
@@ -65,7 +66,7 @@
               trigger="top-start"
               side="top"
               alignment="start"
-              show-backdrop="true"
+              show-backdrop="false"
             >
               <list-page></list-page>
             </ion-popover>
@@ -79,7 +80,7 @@
               trigger="top-center"
               side="top"
               alignment="center"
-              show-backdrop="true"
+              show-backdrop="false"
             >
               <list-page></list-page>
             </ion-popover>
@@ -88,7 +89,7 @@
           <div class="grid-item">
             <h2>Top, End</h2>
             <ion-button id="top-end">Click to Open</ion-button>
-            <ion-popover class="top-end-popover" trigger="top-end" side="top" alignment="end" show-backdrop="true">
+            <ion-popover class="top-end-popover" trigger="top-end" side="top" alignment="end" show-backdrop="false">
               <list-page></list-page>
             </ion-popover>
           </div>
@@ -101,7 +102,7 @@
               trigger="right-start"
               side="right"
               alignment="start"
-              show-backdrop="true"
+              show-backdrop="false"
             >
               <list-page></list-page>
             </ion-popover>
@@ -115,7 +116,7 @@
               trigger="right-center"
               side="right"
               alignment="center"
-              show-backdrop="true"
+              show-backdrop="false"
             >
               <list-page></list-page>
             </ion-popover>
@@ -129,7 +130,7 @@
               trigger="right-end"
               side="right"
               alignment="end"
-              show-backdrop="true"
+              show-backdrop="false"
             >
               <list-page></list-page>
             </ion-popover>
@@ -143,7 +144,7 @@
               trigger="bottom-start"
               side="bottom"
               alignment="start"
-              show-backdrop="true"
+              show-backdrop="false"
             >
               <list-page></list-page>
             </ion-popover>
@@ -157,7 +158,7 @@
               trigger="bottom-center"
               side="bottom"
               alignment="center"
-              show-backdrop="true"
+              show-backdrop="false"
             >
               <list-page></list-page>
             </ion-popover>
@@ -171,7 +172,7 @@
               trigger="bottom-end"
               side="bottom"
               alignment="end"
-              show-backdrop="true"
+              show-backdrop="false"
             >
               <list-page></list-page>
             </ion-popover>
@@ -185,7 +186,7 @@
               trigger="left-start"
               side="left"
               alignment="start"
-              show-backdrop="true"
+              show-backdrop="false"
             >
               <list-page></list-page>
             </ion-popover>
@@ -199,7 +200,7 @@
               trigger="left-center"
               side="left"
               alignment="center"
-              show-backdrop="true"
+              show-backdrop="false"
             >
               <list-page></list-page>
             </ion-popover>
@@ -208,7 +209,7 @@
           <div class="grid-item">
             <h2>Left, End</h2>
             <ion-button id="left-end">Click to Open</ion-button>
-            <ion-popover class="left-end-popover" trigger="left-end" side="left" alignment="end" show-backdrop="true">
+            <ion-popover class="left-end-popover" trigger="left-end" side="left" alignment="end" show-backdrop="false">
               <list-page></list-page>
             </ion-popover>
           </div>
@@ -221,7 +222,7 @@
               trigger="start-start"
               side="start"
               alignment="start"
-              show-backdrop="true"
+              show-backdrop="false"
             >
               <list-page></list-page>
             </ion-popover>
@@ -235,7 +236,7 @@
               trigger="start-center"
               side="start"
               alignment="center"
-              show-backdrop="true"
+              show-backdrop="false"
             >
               <list-page></list-page>
             </ion-popover>
@@ -249,7 +250,7 @@
               trigger="start-end"
               side="start"
               alignment="end"
-              show-backdrop="true"
+              show-backdrop="false"
             >
               <list-page></list-page>
             </ion-popover>
@@ -263,7 +264,7 @@
               trigger="end-start"
               side="end"
               alignment="start"
-              show-backdrop="true"
+              show-backdrop="false"
             >
               <list-page></list-page>
             </ion-popover>
@@ -277,7 +278,7 @@
               trigger="end-center"
               side="end"
               alignment="center"
-              show-backdrop="true"
+              show-backdrop="false"
             >
               <list-page></list-page>
             </ion-popover>
@@ -286,7 +287,7 @@
           <div class="grid-item">
             <h2>End, End</h2>
             <ion-button id="end-end">Click to Open</ion-button>
-            <ion-popover class="end-end-popover" trigger="end-end" side="end" alignment="end" show-backdrop="true">
+            <ion-popover class="end-end-popover" trigger="end-end" side="end" alignment="end" show-backdrop="false">
               <list-page></list-page>
             </ion-popover>
           </div>
