--- a/core/src/components/popover/test/position/index.html
+++ b/core/src/components/popover/test/position/index.html
@@ -15,7 +15,7 @@
   </head>
   <style>
     ion-app > ion-content {
-      --background: #DDDDDD;
+      --background: #dddddd;
     }
     .grid {
       display: grid;
