chore: use text instead osvg

--- a/core/src/components/modal/test/card/index.html
+++ b/core/src/components/modal/test/card/index.html
@@ -111,17 +111,10 @@
         element.innerHTML = `
       <ion-header id="modal-header">
         <ion-toolbar>
-          <ion-title>Contacts</ion-title>
           <ion-buttons slot="end">
-            <ion-button class="add">
-              <ion-icon name="add" slot="icon-only"></ion-icon>
-            </ion-button>
-            <ion-button class="dismiss">
-              <ion-icon name="close-outline" slot="icon-only"></ion-icon>
-            </ion-button>
-            <ion-button class="replace">
-              <ion-icon name="refresh" slot="icon-only"></ion-icon>
-            </ion-button>
+            <ion-button class="add">Add</ion-button>
+            <ion-button class="dismiss">Close</ion-button>
+            <ion-button class="replace">Replace</ion-button>
           </ion-buttons>
         </ion-toolbar>
       </ion-header>
