chore(): prettier again

--- a/core/src/components/modal/test/card-nav/index.html
+++ b/core/src/components/modal/test/card-nav/index.html
@@ -74,6 +74,7 @@
           <ion-button id="open-modal">Open Modal</ion-button>
 
           <ion-modal trigger="open-modal" component="app-nav"></ion-modal>
+        </ion-content>
       </div>
     </ion-app>
 
