--- a/core/src/components/list/test/a11y/index.html
+++ b/core/src/components/list/test/a11y/index.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>List - a11y</title>
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
     <link href="../../../../../css/ionic.bundle.css" rel="stylesheet" />
     <link href="../../../../../scripts/testing/styles.css" rel="stylesheet" />
     <script src="../../../../../scripts/testing/scripts.js"></script>
